# RAG

./: .env.example  .gitignore  AGENTS.md  HANDOVER.md  README.md  phase1.db  pyproject.toml
.github/workflows/: eval.yml  tests.yml
apps/api/app/: main.py
apps/web/: middleware.ts  next.config.js  package-lock.json  package.json
apps/web/app/: layout.tsx
apps/web/components/: document-list.tsx  upload-form.tsx
apps/web/lib/: api-client.ts
docs/superpowers/plans/: 2026-05-15-keycloak-jwks-verifier-mini-scope.md  2026-05-15-keycloak-oidc-phase1-closeout.md  2026-05-15-phase1-balanced-foundation.md  2026-05-15-phase1-fastest-path.md  2026-05-16-ingestion-dispatch.md  2026-05-16-parser-factory-truthful-dispatch.md  2026-05-16-phase-2-ingestion-foundation.md  2026-05-16-real-docling-local.md  2026-05-16-seaweedfs-runtime-coverage.md  2026-05-16-storage-materialization-for-docling.md  2026-05-16-storage-parser-compatibility-guard.md  2026-05-17-chunking-stage.md  2026-05-17-ingestion-reliability-hardening.md  2026-05-17-ingestion-retry-audit.md  2026-05-17-phase-2-temporal-dispatch.md  2026-05-19-temporal-live-validation.md  2026-05-20-phase-3-search-mvp.md  2026-05-20-search-polish.md  2026-05-21-phase-4-chat-dual-path-slice.md  2026-05-21-phase-4-context-builder-slice.md  2026-05-21-phase-4-llm-adapter-slice.md  2026-05-21-phase-4-reranker-slice.md  2026-05-22-phase-4-trust-path.md  2026-05-23-phase-1-2-audit-and-fixes.md  2026-05-23-phase-4-true-closeout.md  2026-06-10-sota-master-plan.md
docs/superpowers/specs/: 2026-05-15-phase1-balanced-foundation-design.md  2026-05-16-ingestion-dispatch-design.md  2026-05-16-parser-factory-truthful-dispatch-design.md  2026-05-16-phase-2-entry-design.md  2026-05-16-real-docling-local-design.md  2026-05-16-seaweedfs-runtime-coverage-design.md  2026-05-16-storage-materialization-for-docling-design.md  2026-05-16-storage-parser-compatibility-guard-design.md  2026-05-17-ingestion-reliability-hardening-design.md  2026-05-17-ingestion-retry-audit-design.md  2026-05-17-phase-2-temporal-dispatch-design.md  2026-05-20-search-polish-design.md  2026-05-21-phase-4-chat-dual-path-slice-design.md  2026-05-21-phase-4-context-builder-slice-design.md  2026-05-21-phase-4-llm-adapter-slice-design.md  2026-05-21-phase-4-reranker-slice-design.md  2026-05-22-phase-4-trust-path-design.md
docs/uber-rag/: API_CONTRACT.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DEEPEYE_INTEGRATION.md  DEVELOPMENT_RULES.md  DOMAIN_MODEL.md  EVALUATION_HARNESS.md  EVALUATION_PLAN.md  INGESTION_PIPELINES.md  PHASE1_GATE_CHECKLIST.md  PROJECT_STATE.md  RESEARCH_PROTOCOL.md  RETRIEVAL_QUALITY.md  ROADMAP.md  SECURITY_ACL.md  STACK_REFERENCES.md  TASKS.md  WORKFLOW_DESIGN.md
docs/uber-rag/adr/: 0000-template.md  0001-lexical-search-engine.md  0002-ingestion-orchestration.md  0003-llm-selection-benchmark.md  0004-llm-adapter-and-provider.md  0005-n8n-excluded-from-research.md  0006-ocr-stack.md  0008-fast-hot-path-async-quality.md  0009-object-storage-direction.md  0010-ingestion-orchestration-direction.md  0011-structured-document-understanding-architecture.md  0012-chunking-strategy.md  0013-embedding-model-bge-m3.md  0014-reranker-selection-phase-4.md  0015-eval-harness-implementation.md  0016-faithfulness-metric-selection.md  0017-streaming-latency-sla.md  0018-incremental-verified-streaming.md  0019-grounding-verifier.md  0020-contextual-chunk-augmentation.md  0021-query-understanding.md
docs/uber-rag/api/: openapi.yaml
docs/uber-rag/eval/: heldout-v1.yaml
docs/uber-rag/research/: 2026-05-16-phase-2-entry.md  2026-05-17-chunking-strategies.md  2026-05-20-phase-3-entry.md  2026-05-21-phase-4-entry.md  2026-06-10-phase-c-entry.md  2026-06-11-phase-d-entry.md  2026-06-13-phase-f-entry-gate.md  README.md
docs/uber-rag/templates/: api_endpoint_spec.md  quality_report.schema.json  research_note.md
infra/docker/: docker-compose.yml
infra/docker/keycloak/: uber-rag-realm.json
infra/migrations/: alembic.ini  env.py
infra/migrations/versions/: 20260515_0001_phase1_foundation.py  20260516_0002_phase2_ingestion_foundation.py  20260516_0003_phase2_ingestion_uniqueness.py  20260516_0004_phase2_ingestion_workflow_backend_truthfulness.py  20260517_0005_ingestion_reliability_hardening.py  20260517_0006_chunks_table.py  20260519_0007_acl_bootstrap_policy.py  20260523_0008_chunks_postgres_compat.py  20260523_0009_worker_id_ingestion.py  20260611_0010_chunk_context_prefix.py  20260613_0011_ingestion_run_profile.py
tests/eval/: conftest.py  test_baseline_faithfulness.py  test_fixture_corpus.py  test_grounding_faithfulness.py  test_grounding_roberta_offline.py  test_hallucination_canaries.py  test_ingestion_fixture.py  test_judge_calibration.py  test_negative_populated_corpus.py  test_nli_faithfulness.py  test_retrieval_contextual_augmentation.py  test_retrieval_parent_expansion.py  test_retrieval_quality.py  test_retrieval_query_understanding.py  test_retrieval_reranker_arm.py
tests/eval/harness/: cli.py  ground_truth.py  judge.py  loader.py  reporter.py  runner.py  scorer.py
tests/eval/load/: test_chat_load.py
tests/eval/reports/: grounding_roberta_offline.json  (+10 more)
tests/integration/: test_acl_leakage_ci.py
(+221 files in other folders)
