[project]
name = "uber-rag"
version = "0.1.0"
description = "API-first, ACL-aware RAG platform for textbooks and loose documents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "pyjwt[crypto]>=2.10,<3",
    "python-multipart>=0.0.18,<1",
    "boto3>=1.35,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.28,<1",
    "pyyaml>=6.0,<7",
    # `app.main` imports both modules at top level via
    # `app.services.retrieval.runtime` (opensearchpy) and the retrievers
    # (qdrant-client). Anyone who runs `pytest` against the API needs
    # them on PATH — they belong in dev, not [ingestion]. Heavy ML
    # weights live in [ml]; these two packages are small (<50 MB combined).
    "qdrant-client>=1.12,<2",
    "opensearch-py>=2.7,<3",
]
temporal = [
    "temporalio>=1.27,<2",
]
ml = [
    "sentence-transformers>=3.3,<4",
    "FlagEmbedding>=1.2,<2",
]
vector-db = [
    "qdrant-client>=1.12,<2",
]
search = [
    "opensearch-py>=2.7,<3",
]
parsing = [
    # Docling is the accepted parser (ADR-0011). Major-pinned to avoid a future
    # v3 re-architecture surprise; floor at the 2.102 line verified at the Phase F
    # entry gate (DoclingDocument body-tree hierarchy + per-item page anchors).
    # Pulls docling-core/-ibm-models/-parse + rapidocr; layout/OCR model weights
    # download on first convert(). Verified not to disturb the frozen
    # transformers 5.8.1 / torch 2.12 / FlagEmbedding stack.
    "docling>=2.102,<3",
]
ingestion = [
    "uber-rag[ml]",
    "uber-rag[vector-db]",
    "uber-rag[search]",
    "uber-rag[parsing]",
]
eval = [
    "sentence-transformers>=3.3,<4",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "apps/api/app/tests",
    "tests",
]
pythonpath = [
    "apps/api",
]
markers = [
    "slow: tests that load ML models (skip on lightweight CI runners)",
    "runload: load tests that require a running stack",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
